[gd_scene load_steps=6 format=3 uid="uid://bauhlwbhxs5h5"]

[ext_resource type="Script" uid="uid://ct7y10fojmy0r" path="res://EnvironmentScenes/breakables/breakable.gd" id="1_n1j46"]
[ext_resource type="Texture2D" uid="uid://kx0kib0f5505" path="res://assets/breakables/box_1.png" id="1_t8ty7"]
[ext_resource type="PackedScene" uid="uid://bw2bd6kqy4sh1" path="res://EnvironmentScenes/breakables/breakablePS.tscn" id="3_a7wna"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a7wna"]
size = Vector2(9, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n1j46"]
size = Vector2(9, 10)

[node name="breakable" type="StaticBody2D"]
y_sort_enabled = true
collision_layer = 16
collision_mask = 3
script = ExtResource("1_n1j46")

[node name="moveColl" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0.5, 5.5)
shape = SubResource("RectangleShape2D_a7wna")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_t8ty7")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2(0.5, 2)
shape = SubResource("RectangleShape2D_n1j46")

[node name="GPUParticles2D" parent="." instance=ExtResource("3_a7wna")]

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="finished" from="GPUParticles2D" to="." method="_on_gpu_particles_2d_finished"]
